--- a/src/css/NewTask.css
+++ b/src/css/NewTask.css
@@ -6,7 +6,8 @@
     border: 1px solid #656763;
     border-radius: 15px;
     max-width: 900px;
-    min-width: 400px;
+    min-width: 300px;
+    width: 85vw;
     max-height: 90px;
     min-height: 90px;
 }
